# arcagi3

./: .gitignore  README.md  graph.py  logger.py  main.py  prompts.py  pyproject.toml  utils.py  visualize.py
agents/: __init__.py
agents/templates/: arcagent.py  mctsagent.py
