[project]
name = "arc-agi-3-agents"
version = "0.1.0"
description = "ARC-AGI-3-Agents"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai==1.72.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "smolagents>=1.20.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-deepseek>=0.1.0",
    "langgraph>=0.2.0",
    "torch",
    "torchvision",
    "numpy>=1.21.0,<1.27.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.3",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.11.4",
]

[project.optional-dependencies]
agentops = [
    "agentops>=0.4.18",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = [
    "tests",
]
plugins = []

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.4.0%2Bcu121-cp312-cp312-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.19.0%2Bcu121-cp312-cp312-win_amd64.whl" }
